# scrypto-llm-poc

./: README.md  demo.py  generate_scrypto.py  results.json
kb/raw/: scrypto-docs.html
output/: Cargo.toml  simple_counter.rs
output/admin_nft/: Cargo.toml
output/admin_nft_retry/: Cargo.toml
output/admin_nft_retry/src/: lib.rs
output/simple_counter/: Cargo.toml
output/simple_counter/src/: lib.rs
